# rustycuda

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
device-sys/: Cargo.toml  build.rs
device-sys/src/: lib.rs
device/include/: device_C_interface.cuh
device/src/: device_C_interface.cu
rustdevice/: Cargo.toml
rustdevice/src/: lib.rs
