[package]
name = "rustdevice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device-sys = { path = "../device-sys"}
num-complex = {workspace = true, features = ["bytemuck"]}
[build-dependencies]
cc = "1.0.83"
